Remove redundant 'if_helpers' calls

--- a/src/ggrc-client/js/components/import-export/templates/relevant-filter.mustache
+++ b/src/ggrc-client/js/components/import-export/templates/relevant-filter.mustache
@@ -36,7 +36,7 @@
       {{/menu}}
     </select>
     {{#filter}}
-      {{#if_helpers '\n #if' model_name '\n and ^if_equals' model_name '__previous__'}}
+      {{^if_equals model_name '__previous__'}}
         {{#model_name}}
           <div class="modal-search objective-selector">
             <input
@@ -53,7 +53,7 @@
             >
           </div>
         {{/model_name}}
-      {{/if_helpers}}
+      {{/if_equals}}
     {{/filter}}
   </div>
 {{/each}}
