--- a/src/ggrc/assets/mustache/base_objects/tree-item-attr.mustache
+++ b/src/ggrc/assets/mustache/base_objects/tree-item-attr.mustache
@@ -98,8 +98,7 @@
   {{/isScopeModel}}
 
   {{#default}}
-      {{#if_helpers '\
-      #if_equals' attr_name 'reference_url'}}
+      {{#if_equals attr_name 'reference_url'}}
         <related-documents instance={instance} kind="REFERENCE_URL">
           <div class="reference-urls-list">
             {{#each documents}}
@@ -111,6 +110,6 @@
         </related-documents>
       {{else}}
         {{get_default_attr_value attr_name instance}}
-      {{/if_helpers}}
+      {{/if_equals}}
   {{/default}}
 {{/switch}}
