--- a/src/ggrc/assets/mustache/base_objects/notes.mustache
+++ b/src/ggrc/assets/mustache/base_objects/notes.mustache
@@ -4,9 +4,7 @@
 }}
 
 {{#instance}}
-  {{#if_helpers '\
-    #if' notes '\
-    or #if' isRevision}}
+  {{#if_helpers '\n #if' notes '\n or #if' isRevision}}
     <div class="row-fluid wrap-row">
       <div data-test-id="title_notes_ef5bc3a71e88" class="span12">
         <h6>Notes</h6>
