--- a/src/ggrc/assets/mustache/base_objects/test_plan.mustache
+++ b/src/ggrc/assets/mustache/base_objects/test_plan.mustache
@@ -4,9 +4,7 @@
 }}
 
 {{#instance}}
-  {{#if_helpers '\
-    #if' test_plan '\
-    or #if' isRevision}}
+  {{#if_helpers '\n #if' test_plan '\n or #if' isRevision}}
     <div class="row-fluid wrap-row">
       <div class="span12">
         <h6>Assessment Procedure</h6>
