--- a/src/ggrc/assets/mustache/task_groups/modal_content.mustache
+++ b/src/ggrc/assets/mustache/task_groups/modal_content.mustache
@@ -67,7 +67,7 @@
       </div>
     </div>
     <div class="span4">
-      {{#if_helpers '\\n ^if' instance.id '\\n and ^if' object_params.workflow}}
+      {{#if_helpers '\n ^if' instance.id '\n and ^if' object_params.workflow}}
         {{#using workflow=instance.workflow}}
         <label>
           Workflow
