--- a/src/ggrc-client/js/components/tree/templates/tree-item-attr.mustache
+++ b/src/ggrc-client/js/components/tree/templates/tree-item-attr.mustache
@@ -6,17 +6,24 @@
 {{#switch name}}
 
   {{#case 'title'}}
-    {{#if_instance_of instance 'Document|Evidence'}}
-      <a class="link" href="{{normalizeLink instance.link}}" target="_blank">
-        {{instance.title}}
-      </a>
+    {{#if_instance_of instance 'Program'}}
+      {{^if instance.mega_program}}
+        <i class="fa fa-bookmark mega-program-tree-view-icon"></i>
+      {{/if}}
+      {{instance.title}}
     {{else}}
-      {{#if_instance_of instance 'Person'}}
-      <div class="email tree-title-area">
-        {{instance.name}}
-      </div>
+      {{#if_instance_of instance 'Document|Evidence'}}
+        <a class="link" href="{{normalizeLink instance.link}}" target="_blank">
+          {{instance.title}}
+        </a>
       {{else}}
-        {{instance.title}}
+        {{#if_instance_of instance 'Person'}}
+        <div class="email tree-title-area">
+          {{instance.name}}
+        </div>
+        {{else}}
+          {{instance.title}}
+        {{/if_instance_of}}
       {{/if_instance_of}}
     {{/if_instance_of}}
   {{/case}}
