--- a/src/ggrc-client/styles/components/tree/_tree-view.scss
+++ b/src/ggrc-client/styles/components/tree/_tree-view.scss
@@ -119,6 +119,12 @@ tree-view {
       }
     }
   }
+
+  .mega-program-tree-view-icon {
+    font-size: 1em;
+    margin-right: 0.2em;
+    color: $lightBlueBtn;
+  }
 }
 
 
