--- a/src/ggrc-client/styles/modules/_object-header.scss
+++ b/src/ggrc-client/styles/modules/_object-header.scss
@@ -56,6 +56,7 @@
 
   &__title-details {
     display: flex;
+    align-items: center;
   }
 
   &__toolbar {
@@ -67,6 +68,13 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+  }
+
+  .mega-program-info-pin-icon {
+    font-size: 1.2em;
+    margin-right: 0.4em;
+    margin-top: 0.4em;
+    color: $lightBlueBtn;
   }
 }
 
