Add mega object Icon

--- a/src/ggrc-client/styles/components/general-page-header/_general-page-header.scss
+++ b/src/ggrc-client/styles/components/general-page-header/_general-page-header.scss
@@ -17,4 +17,11 @@
     padding-top: 2px;
     line-height: 23px;
   }
+
+  &__title-icon_mega-object {
+    font-size: 1.2em;
+    margin-right: 0.4em;
+    margin-top: 0.4em;
+    color: $lightBlueBtn;
+  }
 }
