--- a/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
+++ b/src/ggrc-client/styles/components/unified-mapper/_unified-mapper.scss
@@ -313,6 +313,13 @@ mapper-results-item {
       height: 32px;
       width: $icon-width;
     }
+
+    .mega-object-tree-view-icon {
+      width: auto;
+      font-size: 1em;
+      margin-right: 0.2em;
+      color: $lightBlueBtn;
+    }
   }
 
   object-selection-item {
